# TheReview

./: .gitignore  .gitmodules  ALLOY_GUIDE.md  CACHING_GUIDE.md  DATABASE_SETUP.md  DOCKER_GUIDE.md  DOCKER_IMPLEMENTATION.md  DOCKER_README.md  IMPLEMENTATION_SUMMARY.md  KAFKA_GUIDE.md  REVIEW_SCHEMA.md  SECRETS_MANAGEMENT.md  TELEMETRY_DATA_FLOW.md  TELEMETRY_TROUBLESHOOTING.md  UV_GUIDE.md  UV_IMPLEMENTATION.md  alembic.ini  name.txt  pyproject.toml
.github/: CI_IMPROVEMENTS.md  CI_SERVICES.md  SETUP.md  TESTING_STRATEGY.md
.github/workflows/: main-ci.yml  pr-checks.yml
alembic/: env.py
alembic/versions/: 69116d97f864_create_reviews_table_with_multi_.py
app/: main.py
app/api/v1/: authentication.py  reviews.py  user.py
app/core/: config.py
app/core/auth/: auth_setup.py
app/db/: postgres.py
app/models/: review.py  user.py
app/schemas/: review.py
app/services/: review_service.py
app/utils/: dependencies.py  logger.py  telemetry.py  user_managemet.py
app/utils/mongo/: mongo.py  user_repository.py
otel-collector/: otel-collector-config.yaml
tests/: README.md  conftest.py  test_authentication.py
