[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "fastapi-auth-lib",
    "pydantic-settings>=2.11.0",
]

[tool.uv.workspace]
members = [
    "lib/auth",
]

[tool.uv.sources]
fastapi-auth-lib = { workspace = true, editable = true }
